<resources>
    <string name="app_name">CreditLifeLine3</string>
    <string name="title_emi">EMI</string>
    <string name="title_sip">SIP</string>
    <string name="title_notifications">Notifications</string>

    <string name="enterPrincipal">Enter Principal</string>
    <string name="enterRate">Enter Interest Rate [per annum]</string>
    <string name="enterStartDate">Start Date</string>
    <string name="enterEndDate">End Date</string>
    <string name="saveButton">Save</string>

    <string name="enterTenure">Enter Tenure [in months]</string>
    <string name="rupeeSymbol">\u20B9</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login Activity -->
    <string name="usernameEditText">Username</string>
    <string name="passwordEditText">Password</string>

</resources>
