<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSIP_Activity">

    <LinearLayout
        android:id="@+id/gatherDataLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2">

    <EditText
        android:id="@+id/principalEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:hint="@string/enterPrincipal"
        android:gravity="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/rateEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:hint="@string/enterRate"
        android:gravity="center"
        android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/tenureEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enterTenure"
            android:gravity="center"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gatherDataLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/saveButton"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>