<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEMI_Activity">

    <LinearLayout
        android:id="@+id/gatherDataLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2">

        <EditText
            android:id="@+id/principalEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/enterPrincipal"
            android:gravity="center"
            android:inputType="number"/>

        <EditText
            android:id="@+id/rateEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:hint="@string/enterRate"
            android:gravity="center"
            android:inputType="numberDecimal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/startDateTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enterStartDate"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:inputType="none"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_marginRight="10dp"

                android:focusable="true"
                android:focusableInTouchMode="true"/>
            <TextView
                android:id="@+id/endDateTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enterEndDate"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:inputType="none"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_marginLeft="10dp"

                android:focusable="true"
                android:focusableInTouchMode="true"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gatherDataLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/saveButton"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>